// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden tests — real Supabase data > allDefaults > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 53,
    "slug": "flowers-winery",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 53,
    "slug": "gary-farrell-winery",
  },
  {
    "rank": 3,
    "relaxed": [],
    "score": 53,
    "slug": "jordan-winery",
  },
]
`;

exports[`golden tests — real Supabase data > casualCouple > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [
      "region",
      "mustHaves",
    ],
    "score": 88,
    "slug": "ridge-lytton-springs",
  },
  {
    "rank": 2,
    "relaxed": [
      "region",
      "mustHaves",
    ],
    "score": 83,
    "slug": "halleck-vineyard",
  },
  {
    "rank": 3,
    "relaxed": [
      "region",
      "mustHaves",
    ],
    "score": 79,
    "slug": "iron-horse-vineyards",
  },
]
`;

exports[`golden tests — real Supabase data > familyTrip > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 96,
    "slug": "gundlach-bundschu",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 93,
    "slug": "buena-vista-winery",
  },
]
`;

exports[`golden tests — real Supabase data > luxuryGroup > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 88,
    "slug": "verite-winery",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 87,
    "slug": "arista-winery",
  },
  {
    "rank": 3,
    "relaxed": [],
    "score": 87,
    "slug": "chalk-hill-estate",
  },
  {
    "rank": 4,
    "relaxed": [],
    "score": 87,
    "slug": "flowers-winery",
  },
]
`;

exports[`golden tests — real Supabase data > singleRegionBudget > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 72,
    "slug": "gundlach-bundschu",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 60,
    "slug": "schug-carneros",
  },
  {
    "rank": 3,
    "relaxed": [],
    "score": 46,
    "slug": "buena-vista-winery",
  },
]
`;

exports[`golden tests — real Supabase data > veryRestrictive > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [
      "region",
    ],
    "score": 90,
    "slug": "gundlach-bundschu",
  },
  {
    "rank": 2,
    "relaxed": [
      "region",
    ],
    "score": 86,
    "slug": "rodney-strong",
  },
  {
    "rank": 3,
    "relaxed": [
      "region",
    ],
    "score": 79,
    "slug": "deloach-vineyards",
  },
]
`;

exports[`golden tests — real Supabase data > wideOpen > slug ordering snapshot 1`] = `
[
  {
    "rank": 1,
    "relaxed": [],
    "score": 73,
    "slug": "wilson-winery",
  },
  {
    "rank": 2,
    "relaxed": [],
    "score": 72,
    "slug": "halleck-vineyard",
  },
  {
    "rank": 3,
    "relaxed": [],
    "score": 70,
    "slug": "arista-winery",
  },
  {
    "rank": 4,
    "relaxed": [],
    "score": 70,
    "slug": "bella-winery",
  },
  {
    "rank": 5,
    "relaxed": [],
    "score": 70,
    "slug": "keller-estate",
  },
]
`;
